# fr3_ros

./: .gitignore  README.md  fr3_controller_helper  go.mod  go.sum  main.go
fr3_ros/: CMakeLists.txt  fr3.urdf  fr3_ros_plugin.xml  package.xml
fr3_ros/config/: fr3_ros.yaml
fr3_ros/include/fr3_ros/: cartesian_velocity_controller.h  cbf_controller.h  cbf_utils.h  controller_utils.h  joint_pd_controller.h  joint_velocity_controller.h  kinematic_cbf_controller.h  pinocchio_utils.h  poly_path_controller.h  qp_controller.h  repetitive_calib_controller.h  task_joint_pd_controller.h  traj_gen.h  visualization_utils.h  waypoint_cbf_controller.h  waypoint_controller.h
fr3_ros/launch/: cartesian_velocity_controller.launch  cbf_controller.launch  gazebo.launch  joint_pd_controller.launch  joint_velocity_controller.launch  kinematic_cbf_controller.launch  poly_path_controller.launch  qp_controller.launch  repetitive_calib_controller.launch  robot.rviz  task_joint_pd_controller.launch  waypoint_cbf_controller.launch  waypoint_controller.launch
fr3_ros/msg/: JointTorqueComparison.msg  controlLogs.msg
fr3_ros/robot/: fr3.urdf
fr3_ros/src/: cartesian_velocity_controller.cpp  cbf_controller.cpp  cbf_utils.cpp  controller_utils.cpp  joint_pd_controller.cpp  joint_velocity_controller.cpp  kinematic_cbf_controller.cpp  poly_path_controller.cpp  qp_controller.cpp  repetitive_calib_controller.cpp  task_joint_pd_controller.cpp  traj_gen.cpp  visualization_utils.cpp  waypoint_cbf_controller.cpp  waypoint_controller.cpp
