<?xml version="1.0"?>
<package format="2">
  <name>fr3_ros</name>
  <version>0.0.0</version>
  <description>ROS package for Franka Research 3 robot.</description>
  <maintainer email="bd1555@nyu.edu">Bolun Dai</maintainer>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/BolunDai0216/fr3_ros</url>
  <author>Bolun Dai</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>franka_hw</depend>
  <depend>franka_gripper</depend>
  <depend>franka_example_controllers</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/fr3_ros_plugin.xml" />
  </export>
</package>
